@@ -1,4 +1,8 @@
-* Fri 13 Apr 2012 Eric S. Raymond <esr@snark.thyrsus.com> - 3.5
+* Sat 14 Apr 2012 Eric S. Raymond <esr@snark.thyrsus.com>
+  If a leap-second warning is available from GPS subframe information
+  it is passed to ntpd.
+
+* Sat 14 Apr 2012 Eric S. Raymond <esr@snark.thyrsus.com> - 3.5
   Use pselect when it's available to cut down on wakeups and improve
   signal handling.  New {PPS} message exporting clock drift. The AIVDM
   driver now handles up to 16 interleaved 24A and 24B pair-halves.
